src/objects/Turbonomic_License__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Turbonomic Licenses</relationshipLabel>
        <relationshipName>Turbonomic_Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_License_Features__c</fullName>
        <label>Current License Features</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>storage</fullName>
                </value>
                <value>
                    <fullName>fabric</fullName>
                </value>
                <value>
                    <fullName>network_control</fullName>
                </value>
                <value>
                    <fullName>public_cloud</fullName>
                </value>
                <value>
                    <fullName>cloud_cost</fullName>
                </value>
                <value>
                    <fullName>container_control</fullName>
                </value>
                <value>
                    <fullName>app_control</fullName>
                </value>
                <value>
                    <fullName>cost_control</fullName>
                </value>
                <value>
                    <fullName>vdi_control</fullName>
                </value>
                <value>
                    <fullName>applications</fullName>
                </value>
                <value>
                    <fullName>historical_data</fullName>
                </value>
                <value>
                    <fullName>multiple_vc</fullName>
                </value>
                <value>
                    <fullName>scoped_user_view</fullName>
                </value>
                <value>
                    <fullName>customized_views</fullName>
                </value>
                <value>
                    <fullName>group_editor</fullName>
                </value>
                <value>
                    <fullName>vmturbo_api</fullName>
                </value>
                <value>
                    <fullName>automated_actions</fullName>
                </value>
                <value>
                    <fullName>active_directory</fullName>
                </value>
                <value>
                    <fullName>custom_reports</fullName>
                </value>
                <value>
                    <fullName>planner</fullName>
                </value>
                <value>
                    <fullName>optimizer</fullName>
                </value>
                <value>
                    <fullName>full_policy</fullName>
                </value>
                <value>
                    <fullName>loadbalancer</fullName>
                </value>
                <value>
                    <fullName>deploy</fullName>
                </value>
                <value>
                    <fullName>aggregation</fullName>
                </value>
                <value>
                    <fullName>cloud_targets</fullName>
                </value>
                <value>
                    <fullName>cluster_flattening</fullName>
                </value>
                <value>
                    <fullName>community</fullName>
                </value>
                <value>
                    <fullName>trial</fullName>
                </value>
                <value>
                    <fullName>scaling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Turbonomic Licenses</relationshipLabel>
        <relationshipName>Turbonomic_Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Creation_Use_Cases__c</fullName>
        <label>License Creation Use Cases</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>License_Use_Cases</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_End_Date__c</fullName>
        <label>License End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Entity__c</fullName>
        <description>License Entity for License Generator</description>
        <label>License Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Workloads</fullName>
                </value>
                <value>
                    <fullName>Sockets</fullName>
                </value>
                <value>
                    <fullName>Cores</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Key_Plain_Text__c</fullName>
        <label>License Key (Plain Text)</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Eval</fullName>
                </value>
                <value>
                    <fullName>VHM</fullName>
                </value>
                <value>
                    <fullName>Freemium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Update_Use_Cases__c</fullName>
        <label>License Update Use Cases</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>License_Use_Cases</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Licensee_Email__c</fullName>
        <label>Licensee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Licensee_Name__c</fullName>
        <label>Licensee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_From_Previous_License__c</fullName>
        <label>Notes From Previous License</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>One_Turbonomic_License__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One (Turbonomic License)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Turbonomic Licenses</relationshipLabel>
        <relationshipName>Turbonomic_Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <label>Other Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_License_Key__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Commercial License Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Update__c</fullName>
        <label>Reason for Update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temp_Insert_Features__c</fullName>
        <label>Temp Insert Features</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>storage</fullName>
                </value>
                <value>
                    <fullName>fabric</fullName>
                </value>
                <value>
                    <fullName>network_control</fullName>
                </value>
                <value>
                    <fullName>app_control</fullName>
                </value>
                <value>
                    <fullName>container_control</fullName>
                </value>
                <value>
                    <fullName>public_cloud</fullName>
                </value>
                <value>
                    <fullName>cloud_cost</fullName>
                </value>
                <value>
                    <fullName>planner</fullName>
                </value>
                <value>
                    <fullName>vdi_control</fullName>
                </value>
                <value>
                    <fullName>scaling</fullName>
                </value>
                <value>
                    <fullName>custom_policies</fullName>
                </value>
                <value>
                    <fullName>SLA</fullName>
                </value>
                <value>
                    <fullName>assessment</fullName>
                </value>
                <value>
                    <fullName>cost_control</fullName>
                    <isActive>false</isActive>
                    <label>cost_control</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Licensed_Cores__c</fullName>
        <label>Total Licensed Cores</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Licensed_Sockets__c</fullName>
        <label>Total Licensed Sockets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Licensed_Workloads__c</fullName>
        <label>Total Licensed Workloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turbonomic_Edition__c</fullName>
        <label>Turbonomic Edition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Turbonomic_Edition</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Turbonomic_License_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Turbonomic License Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_Core_Count__c</fullName>
        <label>Updated Core Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Updated_Features__c</fullName>
        <inlineHelpText>Additional Features as they relate to the editions we sell:

Workload Edition: storage, fabric
Application Edition: storage, fabric, network, app
Cloud Native Edition: storage, fabric, network, app, container, public cloud, cost_control</inlineHelpText>
        <label>Additional License Features</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>storage</fullName>
                </value>
                <value>
                    <fullName>fabric</fullName>
                </value>
                <value>
                    <fullName>network_control</fullName>
                </value>
                <value>
                    <fullName>public_cloud</fullName>
                </value>
                <value>
                    <fullName>cloud_cost</fullName>
                </value>
                <value>
                    <fullName>container_control</fullName>
                </value>
                <value>
                    <fullName>app_control</fullName>
                </value>
                <value>
                    <fullName>planner</fullName>
                </value>
                <value>
                    <fullName>vdi_control</fullName>
                </value>
                <value>
                    <fullName>scaling</fullName>
                </value>
                <value>
                    <fullName>custom_policies</fullName>
                </value>
                <value>
                    <fullName>SLA</fullName>
                </value>
                <value>
                    <fullName>assessment</fullName>
                </value>
                <value>
                    <fullName>active_directory</fullName>
                    <isActive>false</isActive>
                    <label>active_directory</label>
                </value>
                <value>
                    <fullName>aggregation</fullName>
                    <isActive>false</isActive>
                    <label>aggregation</label>
                </value>
                <value>
                    <fullName>applications</fullName>
                    <isActive>false</isActive>
                    <label>applications</label>
                </value>
                <value>
                    <fullName>automated_actions</fullName>
                    <isActive>false</isActive>
                    <label>automated_actions</label>
                </value>
                <value>
                    <fullName>cloud_targets</fullName>
                    <isActive>false</isActive>
                    <label>cloud_targets</label>
                </value>
                <value>
                    <fullName>cluster_flattening</fullName>
                    <isActive>false</isActive>
                    <label>cluster_flattening</label>
                </value>
                <value>
                    <fullName>community</fullName>
                    <isActive>false</isActive>
                    <label>community</label>
                </value>
                <value>
                    <fullName>cost_control</fullName>
                    <isActive>false</isActive>
                    <label>cost_control</label>
                </value>
                <value>
                    <fullName>custom_reports</fullName>
                    <isActive>false</isActive>
                    <label>custom_reports</label>
                </value>
                <value>
                    <fullName>customized_views</fullName>
                    <isActive>false</isActive>
                    <label>customized_views</label>
                </value>
                <value>
                    <fullName>deploy</fullName>
                    <isActive>false</isActive>
                    <label>deploy</label>
                </value>
                <value>
                    <fullName>full_policy</fullName>
                    <isActive>false</isActive>
                    <label>full_policy</label>
                </value>
                <value>
                    <fullName>group_editor</fullName>
                    <isActive>false</isActive>
                    <label>group_editor</label>
                </value>
                <value>
                    <fullName>historical_data</fullName>
                    <isActive>false</isActive>
                    <label>historical_data</label>
                </value>
                <value>
                    <fullName>loadbalancer</fullName>
                    <isActive>false</isActive>
                    <label>loadbalancer</label>
                </value>
                <value>
                    <fullName>multiple_vc</fullName>
                    <isActive>false</isActive>
                    <label>multiple_vc</label>
                </value>
                <value>
                    <fullName>optimizer</fullName>
                    <isActive>false</isActive>
                    <label>optimizer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_License_End_Date__c</fullName>
        <label>Updated License End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Updated_License_Entity__c</fullName>
        <label>Updated License Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Workloads</fullName>
                </value>
                <value>
                    <fullName>Sockets</fullName>
                </value>
                <value>
                    <fullName>Cores</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_License_ID__c</fullName>
        <label>Updated License ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_Socket_Count__c</fullName>
        <label>Updated Socket Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Updated_Turbonomic_Edition__c</fullName>
        <label>Updated Turbonomic Edition</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>License_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Turbonomic_Edition</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_Workload_Count__c</fullName>
        <label>Updated Workload Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upgrade_from_VHM_to_Eval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upgrade from VHM to Eval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Case_Commercial_License_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial License Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Case_DL_Form_Fail_to_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DL Form Fail to Send License to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Case_Downgrade_to_VHM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Downgrade to VHM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Case_Form_Download__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form Download</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Case_Internal_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Case_License_Extension_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Extension (Sales)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Case_License_Extension_Technical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Extension (Technical Issues)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Case_NFR_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NFR License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Case_Other_Reason__c</fullName>
        <label>Other Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Use_Case_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Case_Update_Prospect_Contact_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Prospect Contact Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Case_Update_Socket_Core_Count__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Workload/Socket/Core Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Case_Upgrade_Feature_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upgrade Feature Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Case_Upgrade_from_VHM_to_Eval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upgrade from VHM to Eval</label>
        <type>Checkbox</type>
    </fields>
    <label>Turbonomic License</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>License Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Turbonomic Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Eval_Date_Validations</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Updated_License_End_Date__c),
NOT(ISBLANK(Updated_License_End_Date__c)),
$UserRole.Name&lt;&gt;&quot;CFO&quot;,
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;,
NOT(CONTAINS($UserRole.Name,&quot;Marketing&quot;)),
OR(TEXT(License_Type__c)=&quot;VHM&quot;,TEXT(License_Type__c)=&quot;Freemium&quot;),
Updated_License_End_Date__c - TODAY() &gt; 90,
Updated_License_End_Date__c &gt; TODAY()+2,
NOT(INCLUDES(License_Update_Use_Cases__c,&quot;Downgrading to VHM&quot;)),
NOT(INCLUDES(License_Update_Use_Cases__c,&quot;NFR License&quot;)),
NOT(INCLUDES(License_Update_Use_Cases__c,&quot;Internal Use&quot;)))</errorConditionFormula>
        <errorDisplayField>Updated_License_End_Date__c</errorDisplayField>
        <errorMessage>Eval license updates may not exceed 90 days from today or fall within 2 days of today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Eval_Downgrade_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$UserRole.Name&lt;&gt;&quot;CFO&quot;,
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;,
ISCHANGED(Updated_License_End_Date__c),
OR(Updated_License_End_Date__c - TODAY() &gt; 400, Updated_License_End_Date__c &lt; TODAY()+2),
TEXT(License_Type__c)=&quot;Eval&quot;,
INCLUDES(License_Update_Use_Cases__c,&quot;Downgrading to VHM&quot;))</errorConditionFormula>
        <errorDisplayField>Updated_License_End_Date__c</errorDisplayField>
        <errorMessage>When downgrading to VHM, you may not set the updated license end date more than 400 days or within 2 days of today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Eval_Downgrade_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$UserRole.Name&lt;&gt;&quot;CFO&quot;,
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;,
NOT(ISNULL(Updated_Features__c)),
TEXT(License_Type__c)=&quot;Eval&quot;,
INCLUDES(License_Update_Use_Cases__c,&quot;Downgrading to VHM&quot;))</errorConditionFormula>
        <errorMessage>You may not have updated features if downgrading from VHM in your use cases. Please empty the Updated Features field or remove the Downgrading to VHM use case in the License Update Use Cases field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Finance_Only_Primary_Com_Key_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Primary_License_Key__c),
$UserRole.Name&lt;&gt;&quot;CFO&quot;,
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorMessage>Only finance can denote the primary license key</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Finance_Only_Primary_Com_Key_Change2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(License_Type__c),
TEXT(License_Type__c)=&quot;Commercial&quot;,
$UserRole.Name&lt;&gt;&quot;CFO&quot;,
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorDisplayField>License_Type__c</errorDisplayField>
        <errorMessage>Only finance can denote a commercial license type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Opportunity_And_Account</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(),
TEXT(License_Type__c) = &quot;Commercial&quot;,
ISBLANK(Opportunity__c),
ISBLANK(Account__c),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;,
$User.Full_Name__c&lt;&gt;&quot;Gregory Dunn&quot;)</errorConditionFormula>
        <errorMessage>Please make sure this License has an Opportunity and Account associated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Other_Reason_for_Other_Use_Case</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
$UserRole.Name&lt;&gt;&quot;CFO&quot;,
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;,
OR(
ISBLANK(Use_Case_Other_Reason__c),
INCLUDES(License_Creation_Use_Cases__c,&quot;Other&quot;)),
OR(
ISBLANK(Other_Reason__c),
INCLUDES(License_Update_Use_Cases__c,&quot;Other&quot;)))</errorConditionFormula>
        <errorMessage>Please fill in the Other Reason field in order to choose Other as a License Creation/Update Use Case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Use_Cases</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;,
$UserRole.Name&lt;&gt;&quot;CFO&quot;,
$User.Full_Name__c&lt;&gt;&quot;Gregory Dunn&quot;,
ISNEW(),
OR(
INCLUDES(License_Creation_Use_Cases__c,&quot;Form Download&quot;),
INCLUDES(License_Creation_Use_Cases__c,&quot;Commercial License Creation&quot;)))</errorConditionFormula>
        <errorDisplayField>License_Creation_Use_Cases__c</errorDisplayField>
        <errorMessage>Only Finance/Admins can choose Form Download or Commercial License Creation as a use case when creating licenses.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Upgrade_from_VHM_to_Eval_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$UserRole.Name&lt;&gt;&quot;CFO&quot;,
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;,
INCLUDES(License_Update_Use_Cases__c,&quot;Upgrading VHM to Eval&quot;), 
TEXT(License_Type__c)&lt;&gt;&quot;VHM&quot;)</errorConditionFormula>
        <errorMessage>You cannot upgrade a non-VHM license to an Eval license.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VHM_Date_Validations</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Updated_License_End_Date__c),
NOT(ISBLANK(Updated_License_End_Date__c)),
$UserRole.Name&lt;&gt;&quot;CFO&quot;,
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;,
NOT(CONTAINS($UserRole.Name,&quot;Marketing&quot;)),
OR(TEXT(License_Type__c)=&quot;VHM&quot;,TEXT(License_Type__c)=&quot;Freemium&quot;),
Updated_License_End_Date__c - TODAY() &gt; 370,
Updated_License_End_Date__c &gt; TODAY()+2,
NOT(INCLUDES(License_Update_Use_Cases__c,&quot;Upgrading VHM to Eval&quot;)))</errorConditionFormula>
        <errorDisplayField>Updated_License_End_Date__c</errorDisplayField>
        <errorMessage>VHM/Freemium updates may not exceed 370 days from today or within 2 days of today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VHM_Upgrade_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$UserRole.Name&lt;&gt;&quot;CFO&quot;,
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;,
OR(TEXT(License_Type__c)=&quot;VHM&quot;,TEXT(License_Type__c)=&quot;Freemium&quot;),
INCLUDES(License_Update_Use_Cases__c,&quot;Upgrading VHM to Eval&quot;),
NOT(INCLUDES(License_Update_Use_Cases__c,&quot;NFR License&quot;)),
OR(Updated_License_End_Date__c - TODAY() &gt; 90, Updated_License_End_Date__c &lt; TODAY()+2)
)</errorConditionFormula>
        <errorDisplayField>Updated_License_End_Date__c</errorDisplayField>
        <errorMessage>When Upgrading from VHM to Eval, the updated license end date may not exceed 90 days or fall within 2 days of today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VHM_no_new_features</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$UserRole.Name&lt;&gt;&quot;CFO&quot;,
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;,
TEXT(License_Type__c)=&quot;VHM&quot;, 
NOT(ISNULL(Updated_Features__c)), 
NOT(INCLUDES(License_Update_Use_Cases__c,&quot;Upgrading VHM to Eval&quot;)))</errorConditionFormula>
        <errorDisplayField>Updated_Features__c</errorDisplayField>
        <errorMessage>You may not add features to VHM without upgrading to an Eval License.</errorMessage>
    </validationRules>
</CustomObject>